@@ -25,6 +25,9 @@ Core and builtins
 - Issue #1678380: Fix a bug that identifies 0j and -0j when they appear
   in the same code unit.
 
+- Issue #2025 :  Add tuple.count() and tuple.index() methods to comply with
+  the collections.Sequence API.
+
 - Patch #1970 by Antoine Pitrou: Speedup unicode whitespace and linebreak
   detection
 
